Update - bug fix overflow on 668. Change h2 font size

--- a/code/index.html
+++ b/code/index.html
@@ -98,14 +98,17 @@
             <hr>
             <ul>
               <li><a href="#" class="related-news">
-                  <p>PURRENDEZVOUS WITH AZZI: Dive Into the Heartwarming World of Azzi's Purr-fect Serenade</p>
+                  <p><span class="h5">PURRENDEZVOUS WITH AZZI:</span> Dive Into the Heartwarming World of Azzi's
+                    Purr-fect Serenade</p>
                 </a></li>
               <li><a href="#" class="related-news">
-                  <p>PUURSUING THE VIRTUAL VIRAL THRONE: Azzi's Purr-fect Serenade Launches Him into Internet Stardom
+                  <p><span class="h5">PUURSUING THE VIRTUAL VIRAL THRONE:</span> Azzi's Purr-fect Serenade Launches Him
+                    into Internet Stardom
                   </p>
                 </a></li>
               <li><a href="#" class="related-news">
-                  <p>CAT-NIPPLE OF THE DAY: Azzi's Purr-fect Serenade Inspires Global Trend in Cute Cat Videos</p>
+                  <p><span class="h5">CAT-NIPPLE OF THE DAY:</span> Azzi's Purr-fect Serenade Inspires Global Trend in
+                    Cute Cat Videos</p>
                 </a></li>
             </ul>
           </div>
