update mistake correction, review by Matilda

--- a/code/index.html
+++ b/code/index.html
@@ -42,24 +42,27 @@
     </header>
 
 <section class="news-front">
+  <div class="breaking-news">
+    <h2><span>BREAKING NEWS</span></h2>
+  </div>
   <div class="slideshow-container">
    <div class="my-slides fade">
-    <a href="stolen.html"><img src="./images/GettyImages-598322873-409b66c4895d492eb28fde9e752d98ad.jpg" rel="closup detailed bonsai tree" style="width:100%">
+    <a href="stolen.html"><img src="./images/GettyImages-598322873-409b66c4895d492eb28fde9e752d98ad.jpg" rel="closup detailed bonsai tree">
     <p>26.01.2024 10:56</p><h3>Stolen tree</h3><h4>A 400 year old Bonsai was stolen this thursday</h4>
   </a>
   </div>
   <div class="my-slides fade"> 
-    <a href="vandalism.html"><img src="./images/bonsai-img.vanl.jpg" rel="american bonsai artist posing with tree on red backdrop" style="width:100%">
+    <a href="vandalism.html"><img src="./images/bonsai-img.vanl.jpg" rel="american bonsai artist posing with tree on red backdrop">
       <p>26.01.2024 10:45</p><h3>Famous Bonsai artis has his garden vandalized</h3><h4>Could be based on personal vendetta</h4>
     </a>
   </div>
   <div class="my-slides fade">
-    <a href="herbicide.html"><img src="./images/43-WhitePine1625-1.jpg" rel="thick bonsai tree on dark background" style="width:100%">
+    <a href="herbicide.html"><img src="./images/43-WhitePine1625-1.jpg" rel="thick bonsai tree on dark background">
       <p>25.01.2024 07:28</p><h3>Survivor of the atomic bomb dropped on Hiroshima, Japan during World War II.</h3>
     </a>
   </div>
   <div class="my-slides fade" id="last-image">
-    <a href="competition.html"><img src="./images/0D8A6785-2.jpg" rel="Bonsai forest on diagonal platform" style="width:100%">
+    <a href="competition.html"><img src="./images/0D8A6785-2.jpg" rel="Bonsai forest on diagonal platform">
       <p>25.01.2024 16:34</p><h3>Winners for the Prestigious award The Trophy</h3><h4>See which trees that won</h4>
     </a>
   </div>
@@ -119,7 +122,7 @@ function showSlides() {
 <section class="row-articles">
   <div class="img-column">
     <a href="article-juniper.html"><img src="./images/04-Juniper-ebensperger.jpg" rel="famous bonsai tree on diagonal platform" style="width:100%">
-    <div class="article-text"><p>05.01.2024</p><h4>Bonsai Master Masahiko Kimura Creates Gravity-Defying Mini Forests</a></div>
+    <div class="article-text"><p>05.01.2024</p><h4>Bonsai Master Masahiko Kimura Creates Gravity-Defying Mini Forests</h4></a></div>
       <a href="article-juniper6.html"><img src="./images/How-to-Create-a-Cascade-Bonsai-Feature.jpg" style="width:100%" rel="hand holding bonsai tree">
         <div class="article-text"><p>01.12.2023</p><h4>What do you actually know about trees? Learn about the natural growth patterns of trees</h4></a></div>
     <a href="article-juniper5.html"><img src="./images/juniper-bonsai-the-classic-choice-for-beginners-19517f7a-8ae1-42b3-845f-5a7a2aa0a327.jpg" rel="man working on bonsai tree" style="width:100%">
@@ -190,8 +193,10 @@ function showSlides() {
         <button class="button-1">Learn more</button>
     </div>
     </section>
+
     <footer>
       <div class="footer">
+        <p>Copyright &copy; Izabel Lind Färnstrand</p>
       </div>
     </footer>
   </body>
