--- a/code/index.html
+++ b/code/index.html
@@ -3,21 +3,159 @@
   <head>
     <meta charset="utf-8" />
     <!-- Change the title below -->
-    <title>News Site</title>
+    <title>Cake News</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">  <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
+    <header class="header">
+
+      <nav class="navbar">
+        <div class="logo">
+         <a><img src="images/logo.svg" class="techni-logo"></a> 
+         <p>Cake News</p>
+        </div>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Technology</a></li>
+          <li><a href="#">Finance</a></li>
+          <li><a href="#">Education</a></li>
+          <li><a href="#">Contact Us</a></li>
+        </ul>
+      </nav>
+      </div>
     </header>
 
     <section class="big-news">
-      <!-- The big news content -->
+      <div class="banner-image">
+        <img src="https://images.unsplash.com/photo-1588195538326-c5b1e9f80a1b?q=80&w=2850&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" width="100%">
+      </div>
+      <div class="banner">
+        <h1>Main news item headline</h1>
+        <p>
+        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. <br/>
+        Aenean commodo ligula eget dolor. Aenean massa. <br/>
+        Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. <br/>
+        Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. <br/>
+        </p>
+        <button class="banner-btn">Read More</button>
+      </div>
     </section>
 
-    <section class="">
-      <!-- The other news  -->
+    <section class="other-news">
+      <div class="title">
+        <h2>Trending Now</h2>
+      </div>
+        <div class="box">
+          <div class="card">
+            <div class="card-image">
+            <img src="https://images.unsplash.com/photo-1516054575922-f0b8eeadec1a?q=80&w=2787&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" width="100%">
+            </div>
+            <h4>Other news 1</h4>
+            <div class="pra">
+              <p>This is one sentence</p>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-image">
+            <img src="https://images.unsplash.com/photo-1506459225024-1428097a7e18?q=80&w=2362&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" width="100%">
+            </div>
+            <h4>Other news 2</h4>
+            <div class="pra">
+              <p>This is one sentence</p>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-image">
+            <img src="https://images.unsplash.com/photo-1519915028121-7d3463d20b13?q=80&w=2574&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" width="100%">
+            </div>
+            <h4>Other news 3</h4>
+            <div class="pra">
+              <p>This is one sentence</p>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-image">
+            <img src="https://images.unsplash.com/photo-1501437638401-4addcfd56d3d?q=80&w=2605&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" width="100%">
+            </div>
+            <h4>Other news 4</h4>
+            <div class="pra">
+              <p>This is one sentence</p>
+            </div>
+          </div>
+        </div>
     </section>
+    <section class="other-news">
+        <div class="box">
+          <div class="card">
+            <div class="card-image">
+            <img src="https://images.unsplash.com/photo-1488477304112-4944851de03d?q=80&w=2787&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" width="100%">
+            </div>
+            <h4>Other news 1</h4>
+            <div class="pra">
+              <p>This is one sentence</p>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-image">
+            <img src="https://images.unsplash.com/photo-1612198790700-0ff08cb726e5?q=80&w=2787&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" width="100%">
+            </div>
+            <h4>Other news 2</h4>
+            <div class="pra">
+              <p>This is one sentence</p>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-image">
+            <img src="https://images.unsplash.com/photo-1645995575875-ea6511c9d127?q=80&w=2815&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" width="100%">
+            </div>
+            
+            <h4>Other news 3</h4>
+            <div class="pra">
+              <p>This is one sentence</p>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-image">
+            <img src="https://images.unsplash.com/photo-1557925923-cd4648e211a0?q=80&w=2753&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" width="100%">
+            </div>
+            <h4>Other news 4</h4>
+            <div class="pra">
+              <p>This is one sentence</p>
+            </div>
+          </div>
+        </div>
+    </section>
+  <section>
+  <footer class="footer-container">
+    <div class="socialicons">
+      <a href=""><i class="fa-solid fa-envelope"></i></a>
+      <a href=""><i class="fa-solid fa-location-dot"></i></a>
+      <a href=""><i class="fa-solid fa-comments"></i></a>
+    </div>
+    <div class="footer-nav">
+      <ul>
+        <li><a href="">Home</a></li>
+        <li><a href="">News</a></li>
+        <li><a href="">Contact Us</a></li>
+      </ul>
+    </div>
+    <div class="footer-bottom">
+      <p>Copyright &copy;2024; Designed by <span class="designer">Yia Tsai</span>
+    </div>
+  </footer>
+  </section>
   </body>
 </html>
