added text message

--- a/code/index.html
+++ b/code/index.html
@@ -10,6 +10,7 @@
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
+      <h1>hello world</h1>
     </header>
 
     <section class="big-news">
