--- a/code/index.html
+++ b/code/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <!-- Change the title below -->
-    <title>News Site</title>
+    <title>La Dolce Vita</title>
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
   </head>
