added meta string

--- a/code/index.html
+++ b/code/index.html
@@ -4,7 +4,14 @@
     <meta charset="utf-8" />
     <!-- Change the title below -->
     <title>La Dolce Vita</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <meta name="viewport" content= "width=device-width, initial-scale=1.0">
+    <script
+    src="https://kit.fontawesome.com/c38d857281.js"
+    crossorigin="anonymous"
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
