--- a/code/index.html
+++ b/code/index.html
@@ -11,13 +11,14 @@
     <meta name="viewport" content= "width=device-width, initial-scale=1.0">
     <script
     src="https://kit.fontawesome.com/c38d857281.js"
-    crossorigin="anonymous"
+    crossorigin="anonymous"></script>
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
-      <h1>hello world</h1>
+        <div class="label">
+         <a href="index.html" class="logo">La Dolce Vita</a>
     </header>
 
     <section class="big-news">
