--- a/code/index.html
+++ b/code/index.html
@@ -19,6 +19,14 @@
       <!-- Some kind of logo and navbar -->
         <div class="label">
          <a href="index.html" class="logo">La Dolce Vita</a>
+         <!-- MAIN MENU -->
+      <ul class="navbar">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="culture.html">Culture</a></li>
+        <li><a href="events.html">Events</a></li>
+        <li><a href="travel.html">Travel</a></li>
+        <li><a href="about.html">About</a></li>
+      </ul>
     </header>
 
     <section class="big-news">
