--- a/code/index.html
+++ b/code/index.html
@@ -27,6 +27,16 @@
         <li><a href="travel.html">Travel</a></li>
         <li><a href="about.html">About</a></li>
       </ul>
+      <div class="hero-image">
+        <a href="https://www.montebianco.com/en">
+        <img src="Home.png" alt="">
+      </a>
+        <div class="hero-text">
+          <h1>Time For A New Adventure</h1>
+          <a href="https://www.vagabond.se/kategori/antarktis">
+          <button class="discover">DISCOVER NOW</button>
+        </a>
+        </div>
     </header>
 
     <section class="big-news">
