--- a/code/index.html
+++ b/code/index.html
@@ -28,9 +28,6 @@
         <li><a href="about.html">About</a></li>
       </ul>
       <div class="hero-image">
-        <a href="https://www.montebianco.com/en">
-        <img src="Home.png" alt="">
-      </a>
         <div class="hero-text">
           <h1>Time For A New Adventure</h1>
           <a href="https://www.vagabond.se/kategori/antarktis">
@@ -38,9 +35,46 @@
         </a>
         </div>
     </header>
-
+       <!-- The big news content -->
     <section class="big-news">
-      <!-- The big news content -->
+      <h3 class="title-news">EVENTS & FESTIVAL NEWS</h3>
+         <!-- NEWS -->
+        <div class="grid">                 
+        <div class="col-33">
+          <a href="https://www.vagabond.se/kategori/quiz">
+          <div class="sender-picture-container">
+            <img class="sender-picture" src="item3.png">
+          </a>
+          </div>
+        <h3>Andorra Taste Festival, Andorra La Vella, Andorra</h3>
+        <p>Five amazing shows, one amazing setting! A weekend of incredible music returns for its third year at Trentham’s   famous gardens and is set to be bigger and better than ever.</p>
+     </div>  
+    <div class="col-33">
+      <a href="https://www.vagabond.se/europa/storbritannien/guide-tagluffa-i-naturskona-wales">
+      <div class="sender-picture-container">
+        <img class="sender-picture" src="item4.png">
+      </a>
+      </div>
+      <h3>Hong Kong’s Clockenflap 2023 is just around the corner, Hong Kong – 1st-3rd December</h3>
+      <p>Saturday will feature Kaiser Chiefs, along with Razorlight. Lastly, on Sunday, Olly Murs will be supported by Natalie Imbruglia.</p>
+    </div>
+    <div class="col-33">
+      <a href="https://www.vagabond.se/tagg/tagresor"></a>
+      <div class="sender-picture-container">
+        <img class="sender-picture" src="item5.png">
+      </div>
+      <h3>AGLOW light trail, Auckland Castle, Durham, England 22 November to 31t December 2023</h3>
+      <p>Trentham is gearing up for another exciting year with a fantastic summer programme of activities and events, including Summer Concerts,</p>
+    </div> 
+    <div class="col-33">
+      <a href="https://www.vagabond.se/tagg/weekendresa">
+      <div class="sender-picture-container">
+        <img class="sender-picture" src="item7.png">
+      </a>
+      </div>
+      <h3>AGLOW light trail, Auckland Castle, Durham, England 22 November to 31t December 2023</h3>
+      <p>Trentham is gearing up for another exciting year with a fantastic summer programme of activities and events, including Summer Concerts,</p>
+    </div>      
     </section>
 
     <section class="">
