getting started making the page more responsive

--- a/code/index.html
+++ b/code/index.html
@@ -133,7 +133,7 @@
     <!-- Created by and logo -->
 <section class="footer">
 
-    <img src="assets/technigo-logo.svg" width="120px" height="70px" alt="Technigo logo">
+    <img src="assets/technigo-logo.png" width="120px" height="70px" alt="Technigo logo">
     <h4>Created by Paula Jungåker</h4>
 
 </section>
