added news content

--- a/code/index.html
+++ b/code/index.html
@@ -31,13 +31,13 @@
         <div class="hero-text">
           <h1>Time For A New Adventure</h1>
           <a href="https://www.vagabond.se/kategori/antarktis">
-          <button class="discover">DISCOVER NOW</button>
+          <button class="discover">DISCOVER</button>
         </a>
         </div>
     </header>
        <!-- The big news content -->
     <section class="big-news">
-      <h3 class="title-news">EVENTS & FESTIVAL NEWS</h3>
+      <h3 class="title-news">EVENTS & FESTIVALS</h3>
          <!-- NEWS -->
         <div class="grid">                 
         <div class="col-33">
@@ -61,7 +61,7 @@
     <div class="col-33">
       <a href="https://www.vagabond.se/tagg/tagresor"></a>
       <div class="sender-picture-container">
-        <img class="sender-picture" src="item5.png">
+        <img class="sender-picture" src="Restauranger - slideshow.jpg">
       </div>
       <h3>AGLOW light trail, Auckland Castle, Durham, England 22 November to 31t December 2023</h3>
       <p>Trentham is gearing up for another exciting year with a fantastic summer programme of activities and events, including Summer Concerts,</p>
@@ -74,11 +74,47 @@
       </div>
       <h3>AGLOW light trail, Auckland Castle, Durham, England 22 November to 31t December 2023</h3>
       <p>Trentham is gearing up for another exciting year with a fantastic summer programme of activities and events, including Summer Concerts,</p>
-    </div>      
-    </section>
-
-    <section class="">
+    </div>     
+   
       <!-- The other news  -->
-    </section>
+          <div class="grid">                 
+          <div class="col-33">
+            <a href="https://www.vagabond.se/kategori/quiz">
+            <div class="sender-picture-container">
+              <img class="sender-picture" src="Untitled design.png">
+            </a>
+            </div>
+          <h3>Andorra Taste Festival, Andorra La Vella, Andorra</h3>
+          <p>Five amazing shows, one amazing setting! A weekend of incredible music returns for its third year at Trentham’s   famous gardens and is set to be bigger and better than ever.</p>
+       </div>  
+      <div class="col-33">
+        <a href="https://www.vagabond.se/europa/storbritannien/guide-tagluffa-i-naturskona-wales">
+        <div class="sender-picture-container">
+          <img class="sender-picture" src="social.png">
+        </a>
+        </div>
+        <h3>Hong Kong’s Clockenflap 2023 is just around the corner, Hong Kong – 1st-3rd December</h3>
+        <p>Saturday will feature Kaiser Chiefs, along with Razorlight. Lastly, on Sunday, Olly Murs will be supported by Natalie Imbruglia.</p>
+      </div>
+      <div class="col-33">
+        <a href="https://www.vagabond.se/tagg/tagresor"></a>
+        <div class="sender-picture-container">
+          <img class="sender-picture" src="fly.png">
+        </div>
+        <h3>AGLOW light trail, Auckland Castle, Durham, England 22 November to 31t December 2023</h3>
+        <p>Trentham is gearing up for another exciting year with a fantastic summer programme of activities and events, including Summer Concerts,</p>
+      </div> 
+      <div class="col-33">
+        <a href="https://www.vagabond.se/tagg/weekendresa">
+        <div class="sender-picture-container">
+          <img class="sender-picture" src="festival.png">
+        </a>
+        </div>
+        <h3>AGLOW light trail, Auckland Castle, Durham, England 22 November to 31t December 2023</h3>
+        <p>Trentham is gearing up for another exciting year with a fantastic summer programme of activities and events, including Summer Concerts,</p>
+      </div>     
+     <footer>
+          <h4>Copyright Lorenzo Dastoli 2024 - Technigo Planet Team</h4>
+      </footer>
   </body>
 </html>
