--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="col-33">
           <a href="https://www.vagabond.se/kategori/quiz">
           <div class="sender-picture-container">
-            <img class="sender-picture" src="item3.png">
+            <img class="sender-picture" src="code/assets/item3.png">
           </a>
           </div>
         <h3>Andorra Taste Festival, Andorra La Vella, Andorra</h3>
