final project news-site-AI

--- a/code/index.html
+++ b/code/index.html
@@ -12,23 +12,26 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 </meta>
+
 <header>
   <!-- navbar -->
   <body>
-    <navbar>
-        <div class="nav-list">
+    <nav>
+      <ul class="nav-list">
         <li class="nav-item">
-          <div id="navlogo"><img src="assets/logoproject.jpg"></a>
+            <div id="navlogo"><img src="assets/logoproject.jpg"></a>
         <li class="nav-item">
-          <a href="#">News</a>
+            <a href="#">News</a>
         <li class="nav-item">
-          <a href="#">Contribute</a>
+            <a href="#">Contribute</a>
         <li class="nav-item">
-          <a href="#">Subscribe</a>
+            <a href="#">Subscribe</a>
         <li class="nav-item">
-          <a href="#">Contact</a>
-        </lidiv>
-   </navbar>
+            <a href="#">Contact</a>
+        </li>
+    </ul>
+      </div>
+   </nav>
 </header>
 <hr>
 
@@ -37,14 +40,14 @@
   <div class="container">
     <div class="bignews-container">
       <div class="bignews-content">
-        <img src="/assets/bignews.jpeg" alt="ainewsarticle" />
+        <img src="assets/bignews.jpeg" alt="ainewsarticle" />
         <span>
           <h1>The AI-Fueled Future of Work Needs Humans More Than Ever</h1>
           <p>
             Much like the internet did in the 1990s, AI is going to change the very definition of work. While change can
             be scary, if the last three years taught us anything, it can also be an opportunity to reinvent how we do
             things. I believe the best way to manage the changes ahead for employees and employers alike is to adopt a
-            skills-first mindset.As for employers, the rise of AI only increases the importance of a skills-based
+            skills-first mindset. As for employers, the rise of AI only increases the importance of a skills-based
             approach to hiring and developing talent. People are learning AI skills at a rapid clip, with the number of
             AI-skilled members now nine times larger than it was in 2016. And there is a hunger to put these newly
             developed skills into practice: LinkedIn job posts that mention artificial intelligence or generative AI
@@ -59,7 +62,6 @@
     </div>
   </div>
 </main>
-</header>
 
 
 <!--small news-->
@@ -84,7 +86,7 @@
       </article>
 
       <article class="card">
-        <img src="/assets/first.jpeg">
+        <img src="assets/first.jpeg">
         <h3>
           <a href="https://www.wsj.com/tech/ai/how-we-can-control-ai-327eeecf?mod=ai_news_article_pos2">How we can
             control AI.</a>
@@ -123,6 +125,7 @@
     </div>
     </body>
     
+    <!--Footer-->
     <div class="footer">
       <p><span class="material-symbols-outlined">
         copyright
