--- a/code/index.html
+++ b/code/index.html
@@ -55,7 +55,7 @@
           </p>
           </div>
             <div class="picture-news">
-              <img src="new-year.jpg" alt="">
+              <img src="item2.jpg" alt="">
             </div>
           </div>
         <div class="grid">                 
@@ -80,7 +80,7 @@
       <div class="col-33">
         <a href="https://www.vagabond.se/tagg/tagresor"></a>
         <div class="sender-picture-container">
-          <img class="sender-picture" src="item7.png">
+          <img class="sender-picture" src="item5.png">
         </div>
         <h3>AGLOW light trail, Auckland Castle, Durham, England 22 November to 31t December 2023</h3>
         <p>Trentham is gearing up for another exciting year with a fantastic summer programme of activities and events, including Summer Concerts,</p>
@@ -88,7 +88,7 @@
       <div class="col-33">
         <a href="https://www.vagabond.se/tagg/weekendresa">
           <div class="sender-picture-container">
-            <img class="sender-picture" src="social.png">
+            <img class="sender-picture" src="item6.png">
         </a>
       </div>
         <h3>AGLOW light trail, Auckland Castle, Durham, England 22 November to 31t December 2023</h3>
