--- a/code/index.html
+++ b/code/index.html
@@ -42,21 +42,29 @@
                   <img src="assets/belly.webp" alt="Small Image 3" class="small-image">
                   <a href="https://www.kalles.se/produkter/?gclid=CjwKCAiA5L2tBhBTEiwAdSxJX8Kv5atnbvDmj8lPOWTc3jCXXgiD8nQ19GiQ7_7ismPmKVN0NE1cqRoCzncQAvD_BwE" class="image-text">She is all about belly-dancing - Meira in an interview</a>
               </div>
+              <div class="image-container">
+                <img src="assets/lucas.webp" alt="Small Image 4" class="small-image">
+                <a href="https://www.kalles.se/produkter/?gclid=CjwKCAiA5L2tBhBTEiwAdSxJX8Kv5atnbvDmj8lPOWTc3jCXXgiD8nQ19GiQ7_7ismPmKVN0NE1cqRoCzncQAvD_BwE" class="image-text">She is all about belly-dancing - Meira in an interview</a>
+            </div>
           </div>
   
           <div class="image-row">
               <div class="image-container">
-                  <img src="assets/my-hearts-joy.avif" alt="Small Image 4" class="smaller-image">
+                  <img src="assets/my-hearts-joy.avif" alt="Small Image 5" class="smaller-image">
                   <a href="https://www.sommarlovet.se/lyrics/sanger-pa-skolavslutningen/uti-var-hage//" class="image-text">Christofer on his love for Catja - the joy of the heart and eternal longing</a>
               </div>
               <div class="image-container">
-                  <img src="assets/sad.jpeg" alt="Small Image 5" class="smaller-image">
+                  <img src="assets/sad.jpeg" alt="Small Image 6" class="smaller-image">
                   <a href="https://en.wikipedia.org/wiki/Cry_Me_a_River_(Justin_Timberlake_song)" class="image-text">"The dog is my life!" - Krissy-Lee tell all about her best friend</a>
               </div>
               <div class="image-container">
-                  <img src="assets/Sergio_Amanda.jpeg" alt="Small Image 6" class="smaller-image">
+                  <img src="assets/Sergio_Amanda.jpeg" alt="Small Image 7" class="smaller-image">
                   <a href="https://www.djsergiorincon.se/" class="image-text">Amanda can't stand the loft - "We are looking for an apartment with a bedroom" </a>
               </div>
+              <div class="image-container">
+                <img src="assets/lucas_emilia.jpeg" alt="Small Image 8" class="smaller-image">
+                <a href="https://www.djsergiorincon.se/" class="image-text">"It was amazing to see eachother the first time!" - Lucas </a>
+            </div>
           </div>
       </article>
 
