--- a/code/index.html
+++ b/code/index.html
@@ -44,7 +44,7 @@
               </div>
               <div class="image-container">
                 <img src="assets/lucas.webp" alt="Small Image 4" class="small-image">
-                <a href="https://www.kalles.se/produkter/?gclid=CjwKCAiA5L2tBhBTEiwAdSxJX8Kv5atnbvDmj8lPOWTc3jCXXgiD8nQ19GiQ7_7ismPmKVN0NE1cqRoCzncQAvD_BwE" class="image-text">She is all about belly-dancing - Meira in an interview</a>
+                <a href="https://www.kalles.se/produkter/?gclid=CjwKCAiA5L2tBhBTEiwAdSxJX8Kv5atnbvDmj8lPOWTc3jCXXgiD8nQ19GiQ7_7ismPmKVN0NE1cqRoCzncQAvD_BwE" class="image-text">"I don't know what I want" - Lucas reveals in interview "</a>
             </div>
           </div>
   
