--- a/code/index.html
+++ b/code/index.html
@@ -55,14 +55,14 @@
           </p>
           </div>
             <div class="picture-news">
-              <img src="item2.jpg" alt="">
+              <img src="assets/item2.jpg" alt="">
             </div>
           </div>
         <div class="grid">                 
         <div class="col-33">
           <a href="https://www.vagabond.se/kategori/quiz">
             <div class="sender-picture-container">
-              <img class="sender-picture" src="item3.png">
+              <img class="sender-picture" src="assets/item3.png">
           </a>
         </div>
         <h3>Andorra Taste Festival, Andorra La Vella, Andorra</h3>
@@ -71,7 +71,7 @@
       <div class="col-33">
         <a href="https://www.vagabond.se/europa/storbritannien/guide-tagluffa-i-naturskona-wales">
           <div class="sender-picture-container">
-            <img class="sender-picture" src="item4.png">
+            <img class="sender-picture" src="assets/item4.png">
          </a>
       </div>
         <h3>Hong Kong’s Clockenflap 2023 is just around the corner, Hong Kong – 1st-3rd December</h3>
@@ -80,7 +80,7 @@
       <div class="col-33">
         <a href="https://www.vagabond.se/tagg/tagresor"></a>
         <div class="sender-picture-container">
-          <img class="sender-picture" src="item5.png">
+          <img class="sender-picture" src="assets/item5.png">
         </div>
         <h3>AGLOW light trail, Auckland Castle, Durham, England 22 November to 31t December 2023</h3>
         <p>Trentham is gearing up for another exciting year with a fantastic summer programme of activities and events, including Summer Concerts,</p>
@@ -88,7 +88,7 @@
       <div class="col-33">
         <a href="https://www.vagabond.se/tagg/weekendresa">
           <div class="sender-picture-container">
-            <img class="sender-picture" src="item6.png">
+            <img class="sender-picture" src="assets/item6.png">
         </a>
       </div>
         <h3>AGLOW light trail, Auckland Castle, Durham, England 22 November to 31t December 2023</h3>
