added my project

--- a/code/index.html
+++ b/code/index.html
@@ -1,23 +1,107 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <!-- Change the title below -->
-    <title>News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <!-- Change the title below -->
+  <title>Toddler world</title>
+  <link rel="stylesheet" href="./style.css" />
+  <!-- dont forget the meta tag for responsiveness -->
+</head>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
-  </body>
+<body>
+  <header>
+    <!-- Some kind of logo and navbar -->
+    <div class="flex-container">
+      <a href="#"><img src="assets/toddler-logo.png" alt="Logo" class="logo"></a>
+      <ul class="navbar">
+        <li><a href="#">Forum</a></li>
+        <li><a href="#">Archive</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </div>
+  </header>
+
+  <div class="support-grid"></div>
+
+  <div class="band">
+    <div class="item-1">
+      <a href="https://www.google.com" class="card">
+        <div class="thumb" style="background-image: url(assets/preschool.jpg);"></div>
+        <article>
+          <h1>Starting preschool - all you need to know</h1>
+        </article>
+      </a>
+    </div>
+
+    <div class="item-2">
+      <a href="https://www.google.com" class="card">
+        <div class="thumb" style="background-image: url(assets/stroller.jpg);"></div>
+        <article>
+          <h1>The 10 best travel strollers</h1>
+          <p>We have tried them all! From budget to premium.</p>
+        </article>
+      </a>
+    </div>
+
+    <div class="item-3">
+      <a href="https://www.google.com" class="card">
+        <div class="thumb" style="background-image: url(assets/artist.jpg);"></div>
+        <article>
+          <h1>The young artist</h1>
+          <p>Encourage your children to express themselves through art!</p>
+        </article>
+      </a>
+    </div>
+
+    <div class="item-4">
+      <a href="https://www.google.com" class="card">
+        <div class="thumb" style="background-image: url(assets/blw.jpg);"></div>
+        <article>
+          <h1>What is baby-led weaning?</h1>
+          <p>Introduce your baby to solids with this method.</p>
+        </article>
+      </a>
+    </div>
+
+    <div class="item-5">
+      <a href="https://www.google.com" class="card">
+        <div class="thumb" style="background-image: url(assets/reading.jpg);"></div>
+        <article>
+          <h1>Toddler's favourite books</h1>
+          <p>Develop your child's love for reading.</p>
+        </article>
+      </a>
+    </div>
+
+    <div class="item-6">
+      <a href="https://www.google.com" class="card">
+        <div class="thumb" style="background-image: url(assets/playground.jpg);">
+        </div>
+        <article>
+          <h1>Amazing playgrounds around the world</h1>
+          <p>Imagination has no limits! You'll be amazed by these wonderful playgrounds.</p>
+        </article>
+      </a>
+    </div>
+
+    <div class="item-7">
+      <a href="https://www.google.com" class="card">
+        <div class="thumb" style="background-image: url(assets/viking.jpg);">
+        </div>
+        <article>
+          <h1>10 unique Nordic baby names</h1>
+          <p>Name your little one after Vikings and Norse gods.</p>
+        </article>
+      </a>
+    </div>
+
+  </div>
+</body>
+
+<footer>Copyright © 2024 Toddler Publishers</footer>
+
 </html>
