--- a/code/index.html
+++ b/code/index.html
@@ -2,14 +2,24 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Change the title below -->
-    <title>News Site</title>
+    <title>Toddler World</title>
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
+      <div class="flex-container">
+        <a href="#"><img src="assets/toddler-logo.png" alt="Logo" class="logo"></a>
+        <ul class="navbar">
+          <li><a href="#">Forum</a></li>
+          <li><a href="#">Archive</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
     </header>
 
     <section class="big-news">
