styled the content, added footer

--- a/code/index.html
+++ b/code/index.html
@@ -30,6 +30,7 @@
         <div class="card-big" style="background-image: url(assets/preschool.jpg)">
           <article>
             <h1>Starting preschool - all you need to know</h1>
+            <p>We've got you covered!</p>
           </article>
         </div>
        
@@ -43,7 +44,7 @@
         <div class="card-tall" style="background-image: url(assets/artist.jpg)">
           <article>
             <h1>The young artist</h1>
-            <p>Encourage your children to express themselves through art!</p>
+            <p>Encourage your children to express themselves through art.</p>
           </article>
         </div>
         
@@ -77,4 +78,7 @@
       </div>
     </section>
   </body>
+
+  <footer>Copyright © 2024 Toddler Publishers</footer>
+
 </html>
